syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message chatMessageSend_toS {
    required string message = 1;
}

message chatMessageSend_toC {}